# CppImageViewer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: ci.yml
src/: main.cpp
src/Core/: Application.cpp  Application.h  Window.cpp  Window.h
src/Graphics/: Texture.cpp  Texture.h
